; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/hns3vf/extr_hclgevf_main.c_hclgevf_reset_stack.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/hns3vf/extr_hclgevf_main.c_hclgevf_reset_stack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hclgevf_dev = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@HNAE3_UNINIT_CLIENT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"hclge device re-init failed, VF is disabled!\0A\00", align 1
@HNAE3_INIT_CLIENT = common dso_local global i32 0, align 4
@HNAE3_RESTORE_CLIENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hclgevf_dev*)* @hclgevf_reset_stack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hclgevf_reset_stack(%struct.hclgevf_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.hclgevf_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.hclgevf_dev* %0, %struct.hclgevf_dev** %3, align 8
  %5 = load %struct.hclgevf_dev*, %struct.hclgevf_dev** %3, align 8
  %6 = load i32, i32* @HNAE3_UNINIT_CLIENT, align 4
  %7 = call i32 @hclgevf_notify_client(%struct.hclgevf_dev* %5, i32 %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  store i32 %11, i32* %2, align 4
  br label %43

12:                                               ; preds = %1
  %13 = load %struct.hclgevf_dev*, %struct.hclgevf_dev** %3, align 8
  %14 = call i32 @hclgevf_reset_hdev(%struct.hclgevf_dev* %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %12
  %18 = load %struct.hclgevf_dev*, %struct.hclgevf_dev** %3, align 8
  %19 = getelementptr inbounds %struct.hclgevf_dev, %struct.hclgevf_dev* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = call i32 @dev_err(i32* %21, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* %2, align 4
  br label %43

24:                                               ; preds = %12
  %25 = load %struct.hclgevf_dev*, %struct.hclgevf_dev** %3, align 8
  %26 = load i32, i32* @HNAE3_INIT_CLIENT, align 4
  %27 = call i32 @hclgevf_notify_client(%struct.hclgevf_dev* %25, i32 %26)
  store i32 %27, i32* %4, align 4
  %28 = load i32, i32* %4, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %24
  %31 = load i32, i32* %4, align 4
  store i32 %31, i32* %2, align 4
  br label %43

32:                                               ; preds = %24
  %33 = load %struct.hclgevf_dev*, %struct.hclgevf_dev** %3, align 8
  %34 = load i32, i32* @HNAE3_RESTORE_CLIENT, align 4
  %35 = call i32 @hclgevf_notify_client(%struct.hclgevf_dev* %33, i32 %34)
  store i32 %35, i32* %4, align 4
  %36 = load i32, i32* %4, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %32
  %39 = load i32, i32* %4, align 4
  store i32 %39, i32* %2, align 4
  br label %43

40:                                               ; preds = %32
  %41 = load %struct.hclgevf_dev*, %struct.hclgevf_dev** %3, align 8
  %42 = call i32 @hclgevf_reset_handshake(%struct.hclgevf_dev* %41, i32 0)
  store i32 0, i32* %2, align 4
  br label %43

43:                                               ; preds = %40, %38, %30, %17, %10
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i32 @hclgevf_notify_client(%struct.hclgevf_dev*, i32) #1

declare dso_local i32 @hclgevf_reset_hdev(%struct.hclgevf_dev*) #1

declare dso_local i32 @dev_err(i32*, i8*) #1

declare dso_local i32 @hclgevf_reset_handshake(%struct.hclgevf_dev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
